cryptsetup (2:1.1.0-1) unstable; urgency=low

  The default key size for LUKS was changed from 128 to 256 bits, and default
  plain mode changed to aes-cbc-essiv:sha256.
  In case that you use plain mode encryption and don't have set cipher and hash
  in /etc/crypttab, you should do so now. The new defaults are not backwards
  compatible. See the manpage for crypttab(5) for further information.

 -- Jonas Meurer <mejo@debian.org>  Thu, 04 Feb 2010 19:27:29 +0100

cryptsetup (2:1.0.7-3) unstable; urgency=low

  The cryptroot initramfs hook script has been changed to include all
  available crypto kernel modules in case that initramfs-tools is configured
  with MODULES=most (default). See /etc/initramfs-tools/initramfs.conf for
  more information.
  If initramfs-tools is configured with MODULES=dep, the cryptroot hook script
  still tries to detect required modules, as it did by default in the past.

 -- Jonas Meurer <mejo@debian.org>  Sun, 27 Sep 2009 16:49:20 +0200

cryptsetup (2:1.0.7-2) unstable; urgency=low

  Checkscripts vol_id and un_vol_id have been replaced by blkid and un_blkid.
  In case that you explicitly set keyscript=vol_id or keyscript=un_vol_id in
  /etc/crypttab, you will need to update your /etc/crypttab manually.
  Replacing 'vol_id' with 'blkid' and 'un_vol_id' with 'un_blkid' should work.
  The new *blkid keyscripts are fully compatible to the old *vol_id scripts.

 -- Jonas Meurer <mejo@debian.org>  Sun, 23 Aug 2009 23:32:49 +0200

cryptsetup (2:1.0.6-8) unstable; urgency=low

  Keyscripts inside the initramfs have been moved from /keyscripts to
  /lib/cryptsetup/scripts. This way they're now available at the same location
  as on the normal system.
  In most cases no manual action is required. Only if you reference a keyscript
  by path in some script that is included in the initramfs, then you need to
  update that reference by updating the path.

 -- Jonas Meurer <mejo@debian.org>  Tue, 23 Dec 2008 00:43:10 +0100
