@@ -1,4 +1,5 @@
 AUTHORS
+debian/README.gnupg
 debian/README.initramfs
 debian/README.remote
 debian/README.openct
