@@ -1,0 +1,48 @@
+#!/bin/sh
+
+set -e
+
+PREREQ="cryptroot"
+
+prereqs()
+{
+    echo "$PREREQ"
+}
+
+case $1 in
+    prereqs)
+        prereqs
+        exit 0
+        ;;
+esac
+
+. /usr/share/initramfs-tools/hook-functions
+
+# Hooks for loading gnupg software and key into the initramfs
+
+# Check whether cryptroot hook has installed decrypt_gnupg script 
+if [ ! -x ${DESTDIR}/lib/cryptsetup/scripts/decrypt_gnupg ] ; then
+    exit 0
+fi
+
+# Install cryptroot key files into initramfs
+keys=$(sed 's/^\(.*,\|\)key=//; s/,.*//' ${DESTDIR}/conf/conf.d/cryptroot)
+
+if [ "${keys}" != "none" ]; then
+    if [ -z "${keys}" ]; then
+        echo $0: Missing key files in ${DESTDIR}/conf/conf.d/cryptroot >&2
+        cat ${DESTDIR}/conf/conf.d/cryptroot >&2
+        exit 1
+    fi
+    for key in ${keys} ; do
+        if [ ! -d ${DESTDIR}/$(dirname ${key}) ] ; then
+            mkdir -p ${DESTDIR}/$(dirname ${key})
+        fi
+        cp ${key} ${DESTDIR}/${key}
+    done
+fi
+
+# Install gnupg software
+copy_exec /usr/bin/gpg
+
+exit 0
