@@ -1,29 +1,0 @@
-#!/bin/sh
-
-decrypt_gpg () {
-	local key tries rc
-	key="$1"
-	tries=0
-	rc=1
-
-	echo "Performing GPG key decryption" >&2
-	if /usr/bin/gpg -q --decrypt $key; then
-		return 0
-	else
-		return 1
-	fi
-}
-
-echo "gpg decryption not implemented yet" >&2
-exit 1
-
-if [ ! -x /usr/bin/gpg ]; then
-	exit 1
-fi
-
-if [ -z "$1" ]; then
-	exit 1
-fi
-
-decrypt_gpg "$1"
-exit $?
